--- a/.github/workflows/build_logic_testnet.yml
+++ b/.github/workflows/build_logic_testnet.yml
@@ -1,9 +1,8 @@
 name: Process building feature (TestNet)
 
 on:
-    schedule:
-        - cron: "35 */2 * * *"
-
+    # schedule:
+    #     - cron: "35 */2 * * *"
     workflow_dispatch:
 
 concurrency:
