--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,48 +1,48 @@
 name: CI
 
 on:
-  merge_group:
-  pull_request:
-    branches:
-      - '*'
-  push:
-    branches:
-      - 'main'
+    merge_group:
+    pull_request:
+        branches:
+            - "*"
+    push:
+        branches:
+            - "main"
 
 jobs:
-  run-ci:
-    env:
-      GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      SKIP: "pytest-check"
+    run-ci:
+        env:
+            GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+            SKIP: "pytest-check"
 
-    name: Run Type Check & Linters
-    runs-on: ubuntu-latest
+        name: Run Type Check & Linters
+        runs-on: ubuntu-latest
 
-    steps:
-      - uses: actions/checkout@v3
+        steps:
+            - uses: actions/checkout@v3
 
-      - name: Set up Python
-        uses: actions/setup-python@v4
-        with:
-          python-version: 3.10.8
+            - name: Set up Python
+              uses: actions/setup-python@v4
+              with:
+                  python-version: 3.10.8
 
-      - name: Set up Poetry
-        uses: abatilo/actions-poetry@v2.3.0
-        with:
-          poetry-version: 1.3.2
+            - name: Set up Poetry
+              uses: abatilo/actions-poetry@v2.3.0
+              with:
+                  poetry-version: 1.4.2
 
-      - name: Install python dependencies
-        run: poetry install
+            - name: Install python dependencies
+              run: poetry install
 
-      - uses: pre-commit/action@v3.0.0
-        name: "Linters and formatters check"
-        with:
-          extra_args: --all-files --show-diff-on-failure
+            - uses: pre-commit/action@v3.0.0
+              name: "Linters and formatters check"
+              with:
+                  extra_args: --all-files --show-diff-on-failure
 
-      - name: Run pytest
-        run: PYTHONPATH="." poetry run pytest --cov=src --cov-report xml:coverage.xml
+            - name: Run pytest
+              run: PYTHONPATH="." poetry run pytest --cov=src --cov-report xml:coverage.xml
 
-      - name: Upload coverage to Codecov
-        uses: codecov/codecov-action@v3
-        with:
-          fail_ci_if_error: true
+            - name: Upload coverage to Codecov
+              uses: codecov/codecov-action@v3
+              with:
+                  fail_ci_if_error: true
