--- a/.github/workflows/core_logic_mainnet.yml
+++ b/.github/workflows/core_logic_mainnet.yml
@@ -71,7 +71,7 @@ jobs:
                   git config --local user.email "millionalgos@pm.me"
                   git config --local user.name "github-actions[bot]"
                   if [ -n "$(git status --porcelain)" ]; then
-                    git commit -m "chore: refreshed city influence related data and processed packs 🤖" -a
+                    git commit -m "chore(mainnet): refreshed city influence related data and processed packs 🤖" -a
                     echo "HAS_COMMITS=true" >> "$GITHUB_ENV"
                   else
                     echo "no changes - skipping "
