--- a/.github/workflows/build_logic_mainnet.yml
+++ b/.github/workflows/build_logic_mainnet.yml
@@ -1,8 +1,8 @@
 name: Process building feature (MainNet)
 
 on:
-    # schedule:
-    #     - cron: "35 */2 * * *"
+    schedule:
+        - cron: "35 */2 * * *"
     workflow_dispatch:
 
 concurrency:
